test: improve service quality coverage